updated README, python notebook

--- a/STRINGS.ipynb
+++ b/STRINGS.ipynb
@@ -12,6 +12,49 @@
      "level": 1,
      "metadata": {},
      "source": [
+      "Strings: Sorting and Searching"
+     ]
+    },
+    {
+     "cell_type": "raw",
+     "metadata": {},
+     "source": [
+      "Ideas: Suffix Array\n",
+      "\n",
+      "H A C K E R S C H O O L\n",
+      "A C K E R S C H O O L\n",
+      "C K E R S C H O O L\n",
+      "K E R S C H O O L\n",
+      "E R S C H O O L\n",
+      "R S C H O O L\n",
+      "S C H O O L\n",
+      "C H O O L\n",
+      "H O O L\n",
+      "O O L\n",
+      "O L\n",
+      "L\n",
+      "\n",
+      "Sorted Suffix Array\n",
+      "\n",
+      "A C K E R S C H O O L\n",
+      "C H O O L\n",
+      "C K E R S C H O O L\n",
+      "E R S C H O O L\n",
+      "H A C K E R S C H O O L\n",
+      "H O O L\n",
+      "K E R S C H O O L\n",
+      "L\n",
+      "O L\n",
+      "O O L\n",
+      "R S C H O O L\n",
+      "S C H O O L"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
       "Longest Repeated String in PI"
      ]
     },
@@ -613,6 +656,15 @@
      "prompt_number": 14
     },
     {
+     "cell_type": "raw",
+     "metadata": {},
+     "source": [
+      "GuardianExpress: Their attorney alleges that this was a simple mistake on a payout from a lottery machine, reported Newsday.\n",
+      "\n",
+      "HuffPost: According to Newsday, their attorney said it was a simple mistake on a payout on a lottery machine."
+     ]
+    },
+    {
      "cell_type": "heading",
      "level": 2,
      "metadata": {},
@@ -624,7 +676,7 @@
      "cell_type": "raw",
      "metadata": {},
      "source": [
-      "Don Knuth, Jim Morris, Vaughn Pratt: 2 theoreticians and a hacker INDEPENDENTLY discovered this algorithm"
+      "Don Knuth, Jim Morris, Vaughn Pratt: 2 theoreticians and a hacker INDEPENDENTLY discovered this algorithm (1977)"
      ]
     },
     {
